--- a/KaraokePayment/KaraokePayment/Views/HangHoas/Edit.cshtml
+++ b/KaraokePayment/KaraokePayment/Views/HangHoas/Edit.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewData["Title"] = "Edit";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    var url = $"{Model.Ten}/{Model.HangHoaImage}";
 }
 
 <div class="content-wrapper">
@@ -26,13 +27,26 @@
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-md-4">
-                                    <form asp-action="Edit">
+                                    <form asp-action="Edit" enctype="multipart/form-data">
                                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                                         <input type="hidden" asp-for="Id" />
                                         <div class="form-group">
                                             <label asp-for="MaHH" class="control-label"></label>
                                             <input asp-for="MaHH" class="form-control" />
                                             <span asp-validation-for="MaHH" class="text-danger"></span>
+                                        </div>
+                                        <div class="form-group">
+                                            @if (string.IsNullOrEmpty(Model.HangHoaImage))
+                                            {
+                                                <img src="~/Karaoke-assest/Images/ProductDefaultImage.png" style="width:250px;height:250px;" class="xx" alt="ProductDefaultImage" />
+                                            }
+                                            else
+                                            {
+                                                <img src="~/Karaoke-assest/Images/HangHoas/@url" style="width:250px;height:250px;" class="xx" alt="@Model.Ten" />
+
+                                            }
+                                            <input asp-for="ImageFile" accept="images/*" id="InImage" />
+                                            <span asp-validation-for="ImageFile" class="text-danger"></span>
                                         </div>
                                         <div class="form-group">
                                             <label asp-for="Ten" class="control-label"></label>
