--- a/KaraokePayment/KaraokePayment/Views/ThanhToanKaraoke/ThemHangHoaPhong.cshtml
+++ b/KaraokePayment/KaraokePayment/Views/ThanhToanKaraoke/ThemHangHoaPhong.cshtml
@@ -26,6 +26,9 @@
                                             @Html.DisplayNameFor(model => model.MaHH)
                                         </th>
                                         <th>
+                                            @Html.DisplayNameFor(model=>model.HangHoaImage)
+                                        </th>
+                                        <th>
                                             @Html.DisplayNameFor(model => model.Ten)
                                         </th>
                                         <th>
@@ -36,19 +39,30 @@
                                         </th>
                                         <th>
                                             @Html.DisplayNameFor(model => model.NgayNhap)
-                                        </th>
-                                        <th>
-                                            @Html.DisplayNameFor(model => model.HanSuDung)
-                                        </th>
+                                        </th>                                        
                                         <th>So luong them</th>                                        
                                     </tr>
                                 </thead>
                                 <tbody>
                                     @foreach (var item in Model)
                                     {
+                                        var url = $"{item.Ten}/{item.HangHoaImage}";
                                         <tr>
                                             <td>
                                                 @Html.DisplayFor(modelItem => item.MaHH)
+                                            </td>
+                                            <td>
+                                                <div class="images">
+                                                    @if (string.IsNullOrEmpty(item.HangHoaImage))
+                                                    {
+                                                        <img src="~/Karaoke-assest/Images/ProductDefaultImage.png" />
+
+                                                    }
+                                                    else
+                                                    {
+                                                        <img src="~/Karaoke-assest/Images/HangHoas/@url" />
+                                                    }
+                                                </div>
                                             </td>
                                             <td>
                                                 @Html.DisplayFor(modelItem => item.Ten)
@@ -61,10 +75,7 @@
                                             </td>
                                             <td>
                                                 @Html.DisplayFor(modelItem => item.NgayNhap)
-                                            </td>
-                                            <td>
-                                                @Html.DisplayFor(modelItem => item.HanSuDung)
-                                            </td>
+                                            </td>                                            
                                             <td>
                                                 @using (Html.BeginForm("ThemHangHoaPhong", "ThanhToanKaraoke", FormMethod.Post))
                                                 {
