--- a/KaraokePayment/KaraokePayment/Areas/Identity/Pages/Account/Register.cshtml
+++ b/KaraokePayment/KaraokePayment/Areas/Identity/Pages/Account/Register.cshtml
@@ -11,8 +11,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>AdminLTE 3 | Log in (v2)</title>
-
+    <title>Karaoke - Register</title>
+    <link href="@Url.Content("~/Karaoke-assest/Images/karaoke.png")" rel="icon" />
     <!-- Google Font: Source Sans Pro -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
     <!-- Font Awesome -->
