--- a/KaraokePayment/KaraokePayment/Views/BookPhongOrderPhongs/Create.cshtml
+++ b/KaraokePayment/KaraokePayment/Views/BookPhongOrderPhongs/Create.cshtml
@@ -31,12 +31,12 @@
                                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                                         <div class="form-group">
                                             <label asp-for="NhanVienBook1Id" class="control-label"></label>
-                                            <input asp-for="NhanVienBook1Id" class="form-control" />
+                                            <select asp-for="NhanVienBook1Id" class="form-control" asp-items="ViewBag.NhanVienBook1Id"></select>
                                             <span asp-validation-for="NhanVienBook1Id" class="text-danger"></span>
                                         </div>
                                         <div class="form-group">
                                             <label asp-for="NhanVienBook2Id" class="control-label"></label>
-                                            <input asp-for="NhanVienBook2Id" class="form-control" />
+                                            <select asp-for="NhanVienBook2Id" class="form-control" asp-items="ViewBag.NhanVienBook2Id"></select>
                                             <span asp-validation-for="NhanVienBook2Id" class="text-danger"></span>
                                         </div>
                                         <div class="form-group">
