--- a/KaraokePayment/KaraokePayment/Views/HangHoas/Create.cshtml
+++ b/KaraokePayment/KaraokePayment/Views/HangHoas/Create.cshtml
@@ -27,12 +27,17 @@
                         <div class="card-body">
                             <div class="row">
                                 <div class="col-md-4">
-                                    <form asp-action="Create">
+                                    <form asp-action="Create" enctype="multipart/form-data">
                                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                                         <div class="form-group">
                                             <label asp-for="MaHH" class="control-label"></label>
                                             <input asp-for="MaHH" class="form-control" />
                                             <span asp-validation-for="MaHH" class="text-danger"></span>
+                                        </div>
+                                        <div class="form-group">
+                                            <img src="~/Karaoke-assest/Images/ProductDefaultImage.png" style="width:250px;height:250px;" class="xx" alt="hang hoa images" />
+                                            <input asp-for="ImageFile" accept="images/*" id="InImage" />
+                                            <span asp-validation-for="ImageFile" class="text-danger"></span>
                                         </div>
                                         <div class="form-group">
                                             <label asp-for="Ten" class="control-label"></label>
